src/Test/Fixtures/Bad/Types/unexpectedFloatAfterParamInitializer.lf
let theta: Param = param("theta") 2.34;